<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="24dp"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".auth.RegisterActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up_button"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="12"
        android:hint="@string/enter_username_hint"
        android:autofillHints="username"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="12"
        android:hint="@string/enter_password_hint"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="12"
        android:hint="@string/enter_mail_hint"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="12"
        android:hint="@string/enter_phone_hint"
        android:autofillHints="phone"
        android:inputType="phone" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="177dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="177dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>